@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.699 2017/02/12 10:29:04 adam Exp $
+$NetBSD: CHANGES-2017,v 1.700 2017/02/12 10:48:55 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -866,3 +866,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated misc/ruby-ohai to 8.23.0 [mef 2017-02-12]
 	Updated misc/libreoffice to 5.3.0.3nb4 [ryoon 2017-02-12]
 	Updated www/awstats to 7.6 [adam 2017-02-12]
+	Moved pkgtools/pkg_comp to pkgtools/pkg_comp1 [2017-02-12]
